--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>タップで音声再生</title>
+  <title>えっちなまるまる</title>
   <style>
     html, body {
       margin: 0;
@@ -13,17 +13,61 @@
       background: url('sample.jpg') no-repeat center center;
       background-size: cover;
       cursor: pointer;
+      position: relative;
+      font-family: sans-serif;
+    }
+
+    .center-message {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      text-align: center;
+      color: white;
+      text-shadow: 1px 1px 3px black;
+    }
+
+    .tap-text {
+      font-size: 24px;
+      margin-bottom: 16px;
+    }
+
+    .tap-icon {
+      width: 80px;
+      height: auto;
+      animation: bounce 1.2s infinite;
+    }
+
+    @keyframes bounce {
+      0%, 100% {
+        transform: translateY(0);
+      }
+      50% {
+        transform: translateY(10px);
+      }
     }
   </style>
 </head>
 <body>
 
+  <!-- 音声ファイル -->
   <audio id="audio" src="marumaru.mp3"></audio>
 
+  <!-- 中央のタップ案内 -->
+  <div class="center-message">
+    <div class="tap-text">さわって♡</div>
+    <img class="tap-icon" src="touch_transparent.png" alt="タップしてね">
+  </div>
+
+  <!-- スクリプト -->
   <script>
     document.body.addEventListener('click', () => {
       const audio = document.getElementById('audio');
       audio.play();
+
+      // タップ案内を消す（初回再生時のみ）
+      const msg = document.querySelector('.center-message');
+      if (msg) msg.style.display = 'none';
     });
   </script>
 
